# tonGXUN

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TELOS.README.md  build.sh  docs.json
.cicd/: build.sh  pipeline.yml  test.sh
.cicd/helpers/: buildkite.sh  dependency-info.sh
.cicd/metrics/: test-metrics.js
.cspell/: custom-dictionary.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: label_new_issues.yaml  ubuntu-2004.yml
contracts/: CMakeLists.txt
contracts/eosio.bios/include/eosio.bios/: eosio.bios.hpp
contracts/eosio.bios/ricardian/: eosio.bios.contracts.md.in
contracts/eosio.bios/src/: eosio.bios.cpp
contracts/eosio.boot/: CMakeLists.txt
contracts/eosio.boot/include/eosio.boot/: eosio.boot.hpp
contracts/eosio.boot/ricardian/: eosio.boot.contracts.md.in
contracts/eosio.boot/src/: eosio.boot.cpp
contracts/eosio.msig/include/eosio.msig/: eosio.msig.hpp
contracts/eosio.msig/ricardian/: eosio.msig.contracts.md.in
contracts/eosio.msig/src/: eosio.msig.cpp
contracts/eosio.system/: CMakeLists.txt
contracts/eosio.system/include/eosio.system/: block_info.hpp  eosio.system.hpp  exchange_state.hpp  limit_auth_changes.hpp  native.hpp  powerup.results.hpp  rex.results.hpp
contracts/eosio.system/ricardian/: eosio.system.clauses.md  eosio.system.contracts.md.in
contracts/eosio.system/src/: block_info.cpp  delegate_bandwidth.cpp  eosio.system.cpp  exchange_state.cpp  limit_auth_changes.cpp  name_bidding.cpp  native.cpp  powerup.cpp  producer_pay.cpp  rex.cpp  rex.results.cpp  system_kick.cpp  system_rotation.cpp  voting.cpp
contracts/eosio.token/include/eosio.token/: eosio.token.hpp
contracts/eosio.token/ricardian/: eosio.token.contracts.md.in
contracts/eosio.token/src/: eosio.token.cpp
contracts/eosio.wrap/: CMakeLists.txt
contracts/eosio.wrap/include/eosio.wrap/: eosio.wrap.hpp
contracts/eosio.wrap/ricardian/: eosio.wrap.contracts.md.in
contracts/eosio.wrap/src/: eosio.wrap.cpp
contracts/test_contracts/blockinfo_tester/: CMakeLists.txt
contracts/test_contracts/blockinfo_tester/include/blockinfo_tester/: blockinfo_tester.hpp
contracts/test_contracts/blockinfo_tester/src/: blockinfo_tester.cpp
contracts/test_contracts/sendinline/: CMakeLists.txt
contracts/test_contracts/sendinline/src/: sendinline.cpp
docs/: index.md
docs/01_key-concepts/: 01_system.md  02_ram.md  03_cpu.md  04_net.md  05_stake.md  06_vote.md
docs/04_guides/: 01_upgrading-the-eosio.system-contract.md  04_how-to-vote.md  (+5 more)
tests/: CMakeLists.txt  contracts.hpp.in  eosio.limitauth_tests.cpp  eosio.msig_tests.cpp  eosio.system_blockinfo_tests.cpp  eosio.system_tester.hpp  eosio.system_tests.cpp  eosio.token_tests.cpp  eosio.wrap_tests.cpp  main.cpp  telos.system_tests.cpp
tests/test_contracts/: telos.decide.abi
tests/test_contracts/old_versions/telos.contracts/eosio.msig/: eosio.msig.abi
tests/test_contracts/old_versions/telos.contracts/eosio.system/: eosio.system.abi
